<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lable_title"
        android:layout_marginTop="5dp"
        android:textColor="@color/BurlyWood"
        android:textSize="15dp"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/BurlyWood"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lable_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/BurlyWood"
        android:textSize="15dp"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint_content"
        android:backgroundTint="@color/BurlyWood"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="124dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Red"
            android:text="@string/cancel_button"
            android:textColor="@color/White"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/RoyalBlue"
            android:text="@string/reset_button"
            android:textColor="@color/White"
            app:layout_constraintEnd_toStartOf="@+id/submitButton"
            app:layout_constraintHorizontal_bias="0.596"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="129dp"
            android:layout_height="46dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/BurlyWood"
            android:text="submit"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>